[package]
name = "stainless_ffmpeg"
version = "0.2.4"
edition = "2018"
authors = [
  "Marc-Antoine Arnaud <arnaud.marcantoine@gmail.com>",
  "Romane Lafon <romane@nomalab.com>"
]
description = """
Efficient Rust wrapper for FFmpeg.
"""
license = "Apache-2.0"
repository = "https://github.com/nomalab/stainless-ffmpeg"

[dependencies]
stainless-ffmpeg-sys = "4.2.3"
libc = "0.2.42"
log = "^0.4"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
rand = "0.7"

[dev-dependencies]
env_logger = "^0.7"
