[package]
name = "stainless_ffmpeg"
version = "0.3.10"
edition = "2021"
authors = [
  "Marc-Antoine Arnaud <arnaud.marcantoine@gmail.com>",
  "Romane Lafon <romane@nomalab.com>"
]
description = """
Efficient Rust wrapper for FFmpeg.
"""
license = "Apache-2.0"
repository = "https://github.com/nomalab/stainless-ffmpeg"
exclude = ["tests/"]

[dependencies]
ffmpeg-sys-next = "5.0.1"
libc = "0.2.42"
log = "^0.4"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
rand = "0.8"
uuid = { version = "1.3.3", features = ["serde", "v4"] }

[dev-dependencies]
cpal = "0.13"
env_logger = "^0.9"
ringbuf = "0.2.3"

[build-dependencies]
ffmpeg-sys-next = "5.0.1"
